change name package json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "WeekAway API",
+  "name": "WeekAway_API",
   "version": "1.0.0",
   "description": "WeekAway API data provider",
   "type": "module",
@@ -12,7 +12,6 @@
     "Revert": "psql -d weekaway -U Tim -f  ./data/revert/createTable.sql",
     "Verify": "psql -d weekaway -U Tim -f  ./data/verify/createTable.sql",
     "resetDB": "psql -d weekaway -U Tim -f ./data/revert/createTable.sql; psql -d weekaway -U Tim -f ./data/deploy/createTable.sql;psql -d weekaway -U Tim -f ./data/deploy/CreateFonction.sql; psql -d weekaway -U Tim -f ./data/deploy/set_timestamp.sql; psql -d weekaway -U Tim -f ./data/verify/createTable.sql; psql -d weekaway -U Tim -f data/seeding.sql;"
-
   },
   "keywords": [],
   "author": "",
