change name package json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "WeekAway_API",
+  "name": "Travelify_API",
   "version": "1.0.0",
   "description": "WeekAway API data provider",
   "type": "module",
